# molcrafts

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  makefile  mkdocs.yml  molcrafts.code-workspace  molcrafts.def  pyproject.toml  requirements-dev.txt  requirements-pip.txt  spack.yaml
.devcontainer/: Dockerfile  README.md  devcontainer.json  environment.yml  on_create_install.sh
.devcontainer/cpu/: devcontainer.json  environment.yml  install.sh
.devcontainer/cuda/: devcontainer.json  environment.yml
.devcontainer/features/molexp/: devcontainer-feature.json
.devcontainer/features/molpot/: devcontainer-feature.json  install.sh
.devcontainer/features/molpy/: devcontainer-feature.json  install.sh
.devcontainer/features/molvis/: devcontainer-feature.json
.devcontainer/gpu/: devcontainer.json  install.sh
.devcontainer/scripts/: install-cmake.sh  install-dev-tools.sh  install-vcpkg.sh
.github/workflows/: build_dev_image.yaml  ci.yml
docs/asserts/: deps.dot
