[project]
name = "molcrafts"
authors = [
    {name = "Roy Kid", email = "lijichen365@gmail.com"},
]
description = "Monorepo housing MolCrafts' tools"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["chemistry"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]
dynamic = ["version"]

[tool.black]
line-length = 80
target-version = ['py310']

[tool.pylint."messages control"]
ignore = ["setup.py", "__init__.py"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring"
]

[tool.isort]
profile = "black"
known_first_party = ["mycorp"]  # see package configuration below